Hero-Section terminado, carrusel listo y navbar transparente

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
     </nav>
 
+    <!-- Hero-section -->
     <header id="Hero-Section">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
