--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#Inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#QuienesSomos">Quienes Somos</a>
+                        <a class="nav-link" href="#Quienes-Somos">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Destacados">Destacados</a>
@@ -77,6 +77,36 @@
         </div>
     </header>
 
+    <!-- Quienes-Somos -->
+    <section id="Quienes-Somos" class="bg-black text-white">
+            <div class="py-5">
+                <h4 class="text-center text-uppercase">¿Quiénes Somos?</h4>
+                <hr class="opacity-100 w-75 mx-auto mt-4">
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <i class="fa-solid fa-plane d-block fa-2x text-center mb-2"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam deleniti rerum eos omnis debitis doloremque, voluptas non perspiciatis laboriosam provident dolor eum, possimus tenetur explicabo dolore porro est, incidunt temporibus! Magnam fugiat officiis aliquam, maiores iusto cum ut eos laborum! Ex cupiditate corporis ipsam. Quia fugit consequatur velit pariatur mollitia eveniet in itaque. Vero quaerat dolorum nihil quas vel, nulla nobis doloribus dolores voluptate magni Ipsam deleniti rerum eos omnis debitis doloremque, voluptas non perspiciatis laboriosam</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam deleniti rerum eos omnis debitis doloremque, voluptas non perspiciatis laboriosam provident dolor eum, possimus tenetur explicabo dolore porro est, incidunt temporibus! Magnam fugiat officiis aliquam, maiores iusto cum ut eos laborum! Ex cupiditate corporis ipsam. Quia fugit consequatur velit pariatur mollitia eveniet in itaque. Vero quaerat dolorum nihil quas vel, nulla nobis doloribus dolores voluptate magni Ipsam deleniti rerum eos omnis debitis doloremque, voluptas non perspiciatis laboriosam</p>
+                        <i class="fa-solid fa-mountain d-block fa-2x text-center mt-2"></i>
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fa-solid fa-route d-block fa-2x text-center mb-2"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam deleniti rerum eos omnis debitis doloremque, voluptas non perspiciatis laboriosam provident dolor eum, possimus tenetur explicabo dolore porro est, incidunt temporibus! Magnam fugiat officiis aliquam, maiores iusto cum ut eos laborum! Ex cupiditate corporis ipsam. Quia fugit consequatur velit pariatur mollitia eveniet in itaque. Vero quaerat dolorum nihil quas vel, nulla nobis doloribus dolores voluptate magni Ipsam deleniti rerum eos omnis debitis doloremque, voluptas non perspiciatis laboriosam</p>
+                    </div>
+                </div>
+            </div>
+            <div class="py-5">
+                <h4 class="text-center text-uppercase">destacados</h4>
+                <hr class="opacity-100 mt-4 mx-5">
+            </div>
+        
+    </section>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/assets/js/app.js"></script>
